# nethid

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  openapi.yaml
demo/hidgui/: CMakeLists.txt  Cargo.toml  README.md  build.sh  main.c
demo/hidgui/src/: auth.rs  keymap.rs  main.rs  udp.rs
demo/keycli/: keycli.py  usb_hid.py
scripts/: makefsdata.py
src/: ap_mode.c  ap_mode.h  auth.c  auth.h  board.c  board.h  config.h  dhcpserver.c  dhcpserver.h  hid_keys.c  hid_keys.h  lwipopts.h  main.c  settings.c  settings.h  syslog.c  syslog.h  usb.c  usb.h  usb_descriptors.c  usb_descriptors.h  wifi_scan.c  wifi_scan.h
src/httpd/: httpd.c  httpd.h  httpd_handlers.c  httpd_handlers.h  httpd_server.c  httpd_server.h  httpd_websocket.c
src/mqtt/: mqtt.c  mqtt.h
src/websocket/: websocket.c  websocket.h
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: hid.ts  keyboard-layouts.ts  keyboard.ts  kle-parser.ts  main.ts  style.css  style.scss
