[package]
name = "hidgui-rs"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -2 }
nursery = { level = "deny", priority = -2 }
too_many_lines = "allow"
option_if_let_else = "allow"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
hex = "0.4.3"
sdl2 = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "3.2.0", features = ["json"] }
